# SEP

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
benchmarks/: README.md  registry.yaml
benchmarks/BP_Clickstream_Docs_Funnel/: README.md  expected_metrics.json  figure_recipe.py  generate.py  run_negative_detour.py  run_reference.py  spec.yaml
benchmarks/BP_Delay_Coupled_Pair/: README.md  expected_metrics.json  figure_recipe.py  generate.py  run_reference.py  spec.yaml
benchmarks/BP_Linear_Two_Block/: README.md  expected_metrics.json  figure_recipe.py  generate.py  run_reference.py  spec.yaml
benchmarks/BP_Mobility_Chicago_Corridors/: README.md  evaluate_application.py  expected_metrics.json  figure_recipe.py  generate.py  spec.yaml  (+3 more)
docs/: implementation_plan.md
failures/: negative_registry.csv
observables/: catalog.json  field_dictionary.md  schema.json
tests/: conftest.py  test_archive_bypass_detection.py  test_archive_reports.py  test_archive_write_invariant.py  test_benchmark_generation.py  test_cross_domain_package.py  test_delay_dynamics.py  test_delay_figures.py  test_evidence_engine.py  test_gate_execution.py  test_law_fits.py  test_leakage.py  test_ledgers.py  test_mutation_root_ordering.py  test_observables.py  test_paper_e_package.py  test_projectors.py  test_registry_contracts.py  test_repository_hygiene.py  test_safe_execution.py  test_smoke_linear.py
validation/: __init__.py  acceptance_profiles.yaml  ci_checks.py  common.py  gate_G1.py  gate_G2.py  gate_G3.py  gate_G4.py  gate_G5.py  gate_G6.py
(+395 files in other folders)
