[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subsystem-emergence"
version = "0.2.0"
description = "Research suite for spectral, coherent, nonlinear, and stochastic subsystem emergence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
